# gentlebot

./: README.md  TESTING.md  pyproject.toml
.github/workflows/: tests.yml
src/: conftest.py  test_runner.py
src/umigame/: umigame.py  umigame_test.py
src/yomiage/: RDBMS.md  README.md  voicebox_test.py  yomiage.py  yomiage_test.py
